force-app/main/default/objects/Incentive__c/fields/Payout_Status__c.field-meta.xml
<CustomField>
    <fullName>Payout_Status__c</fullName>
    <label>Payout Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>